Fixed issue with logo text wrap; updated profile photo; finished project recap

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -36,6 +36,7 @@
     box-shadow: none;
     margin-right: 45%;  /* Adjust the logo's right margin */
     margin-left: 20px;
+    white-space: nowrap;
 
     .name {
       color: var(--background-secondary); /* Set the color for the brackets */
